Added more visualizations

--- a/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
+++ b/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "## Optimal hyperparamers\n",
     "\n",
-    "SNN - 2nd nearest neighbor threshold, PT - PhotoTourism, PP - PragueParks. \n",
+    "SNN - 2nd nearest neighbor threshold, PT - PhotoTourism, PP - PragueParks, inl_th - inlier threshold for DEGENSAC.\n",
     "\n",
     "\n",
     "| Method | mutual SNN threshold | PT inl_th |  PP inl_th | PT val stereo mAA | PP val stereo mAA |  Other |\n",
@@ -247,6 +247,23 @@
     "\n",
     "1. SuperGlue analogue yet to be trained for them. Nobody sane would you SuperPoint w/o SuperGlue for the most of the cases.\n",
     "2. Evaluation on indoor data, e.g. ScanNet. One of the SuperPoint strengths - good performance indoor, which is yet to be tested for others. I might test it, but right not in the mood to download, print and scan the data form required for ScanNet access. \n",
+    "\n",
+    "## Bonus: more visualizations\n",
+    "\n",
+    "Legend: \n",
+    "- blue points: COLMAP reconstructed 3D points\n",
+    "- red point: non-matched keypoints .\n",
+    "\n",
+    "![](2022-12-31-UnsuperPoint-family_files/tree1.gif \"Matched and non-matched keypoints from PragueParks Tree scene\")\n",
+    "\n",
+    "![](2022-12-31-UnsuperPoint-family_files/ll.gif \"Matched and non-matched keypoints from PhotoTourism Lincoln memorial statue scene\")\n",
+    "\n",
+    "![](2022-12-31-UnsuperPoint-family_files/flo.gif \"Matched and non-matched keypoints from PhotoTourism Florence cathedral side scene\")\n",
+    "\n",
+    "![](2022-12-31-UnsuperPoint-family_files/pond1.gif \"Matched and non-matched keypoints from PragueParks Pond scene\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "### Acknowledgements.\n",
     "\n",
