--- a/_notebooks/2023-07-05-IMC2023-Recap.ipynb
+++ b/_notebooks/2023-07-05-IMC2023-Recap.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Image Matching Challenge 2023: SfM Unchained\"\n",
+    "# \"Image Matching Challenge 2023: The Unbearable Weight of the Bundle Adjustment\"\n",
     "> \"3D reconstruction is harder than two view matching\"\n",
     "- toc: false\n",
     "- image: images/pascal-cage.jpg\n",
@@ -156,6 +156,9 @@
     "![](2023-07-05-IMC2023-Recap_files/inbox-3964695-051e9413d0ce9cd8357723ba7efab1be-full_pipeline.png \"5th place solution, classical affine features, off-the-shelf kornia. Candidate for 1st money prize\")\n",
     "\n",
     "\n",
+    "![](2023-07-05-IMC2023-Recap_files/7rlp3j.jpg  \"Clever engineering is all you need sometimes\")\n",
+    "\n",
+    "\n",
     "### Permissive license and faster SuperGlue is out - LightGlue\n",
     "\n",
     "\n",
@@ -191,9 +194,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
