--- a/_notebooks/2023-07-05-IMC2023-Recap.ipynb
+++ b/_notebooks/2023-07-05-IMC2023-Recap.ipynb
@@ -186,6 +186,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Per-dataset results\n",
+    "\n",
+    "### Heritage\n",
+    "\n",
+    "The Heritage dataset results show the biggest variability among the methods/worst/best case performance.\n",
+    "\n",
+    "![image.png](2023-07-05-IMC2023-Recap_files/att_00007.png)\n",
+    "\n",
+    "### Urban\n",
+    "\n",
+    "Because the main Urban dataset challenge -- repeated patterns and symmetrical structures -- cannot be even theoretically addressed by better two-view feature matching, it is the hardest dataset. No single team tried to work on this part, so surprise it is hard. \n",
+    "\n",
+    "![](2023-07-05-IMC2023-Recap_files/att_00006.png \"Urban dataset is the hardest among 2023 ones\")\n",
+    "\n",
+    "### Haiper\n",
+    "\n",
+    "The Haiper results are either hit or miss w/o much difference between methods.\n",
+    "![](2023-07-05-IMC2023-Recap_files/att_00005.png \"Haiper scenes are like meeting the dinosaur: you either meet it, or not\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion: SfM is far from solved\n",
     "\n",
     "As in many other computer vision tasks, if something seems to be \"solved\", that is just because the datasets are old and obsolete. You still need a good dense capture to do the 3D reconstruction. Many images, many compute, or the additional data like inertial module/GPS, or skilled person to do the capture, is required. See you hopefully next year. \n"
@@ -194,21 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.4"
   }
  },
  "nbformat": 4,
