Fix typos found by Fabio

--- a/_notebooks/2023-07-05-IMC2023-Recap.ipynb
+++ b/_notebooks/2023-07-05-IMC2023-Recap.ipynb
@@ -62,7 +62,7 @@
     "![](2023-07-05-IMC2023-Recap_files/Dioscuri.png \"Images of the Dioscuri temple from Heritage dataset\")\n",
     "\n",
     "\n",
-    "- [\"banana effect\"](https://dev.epicgames.com/community/learning/tutorials/1xM4/capturing-reality-banana-effect-what-to-do-if-my-model-is-bent), when the flat surface is often reconstructed as curved due to low overlap between consecutive frames and slight misalignments, which accululate altogether.\n",
+    "- [\"banana effect\"](https://dev.epicgames.com/community/learning/tutorials/1xM4/capturing-reality-banana-effect-what-to-do-if-my-model-is-bent), when the flat surface is often reconstructed as curved due to low overlap between consecutive frames and slight misalignments, which accumulate altogether.\n",
     "\n",
     "![](2023-07-05-IMC2023-Recap_files/wall.png \"3D model of the `wall` from Heritage dataset\")\n",
     "\n",
@@ -113,16 +113,16 @@
     "\n",
     "### Global descriptor-based co-visibility is hard\n",
     "\n",
-    "Given that exhaistive image matching grows quadratically with number of images, it is very tempting to filter out some of those image pairs, based on some kind of covisibility criterion. And the simplest/fastest to compute is global descriptor one - you get a single vector per image, calculate global image similarity and remove those image pairs, which similarity is below threshold. Or take the top-K most similar images. In fact, I have used such approach in our paper [\"Efficient Initial Pose-graph Generation for Global SfM\"](https://arxiv.org/abs/2011.11986). However, what worked on large (thousands) image collections with dense viewpoint coverage, as 1DSfM, does not work that well on sparse image collections with many close-ups, rotations and illumination changes. \n",
+    "Given that exhaustive image matching grows quadratically with number of images, it is very tempting to filter out some of those image pairs, based on some kind of covisibility criterion. And the simplest/fastest to compute is global descriptor one - you get a single vector per image, calculate global image similarity and remove those image pairs, which similarity is below threshold. Or take the top-K most similar images. In fact, I have used such approach in our paper [\"Efficient Initial Pose-graph Generation for Global SfM\"](https://arxiv.org/abs/2011.11986). However, what worked on large (thousands) image collections with dense viewpoint coverage, as 1DSfM, does not work that well on sparse image collections with many close-ups, rotations and illumination changes. \n",
     "\n",
     "Some teams had moderate success with [NetVLAD](https://arxiv.org/abs/1511.07247) and [DINOv2](https://github.com/facebookresearch/dinov2) global descriptors, however, the best strategy, it seems, to use the two-view matching itself, but on a smaller resolution -- such as SuperGlue, or KeyNet-AffNet-HardNet-AdaLAM.\n",
     "\n",
     "\n",
     "### PixelSfM is good idea, but needs improvements\n",
     "\n",
-    "Many participants has tried to improve the initial SfM camera poses by utilizing [PixelPerfectSfM](https://github.com/cvg/pixel-perfect-sfm) -- the feature-metric bundle adjustment. While it imrpoves results, it took a lot of time and especially memory, which rendered it unpractical for many teams. Another challenge is the package compilation itself, which is not easy either.\n",
+    "Many participants has tried to improve the initial SfM camera poses by utilizing [PixelPerfectSfM](https://github.com/cvg/pixel-perfect-sfm) -- the feature-metric bundle adjustment. While it improves results, it took a lot of time and especially memory, which rendered it unpractical for many teams. Another challenge is the package compilation itself, which is not easy either.\n",
     "\n",
-    "[1st-place team](https://www.kaggle.com/competitions/image-matching-challenge-2023/discussion/417407) proposed a novel version of the correspondence and poses refimenent instead - called [Detector-Free Structure from Motion](https://zju3dv.github.io/DetectorFreeSfM/).\n",
+    "[1st-place team](https://www.kaggle.com/competitions/image-matching-challenge-2023/discussion/417407) proposed a novel version of the correspondence and poses refinement instead - called [Detector-Free Structure from Motion](https://zju3dv.github.io/DetectorFreeSfM/).\n",
     "\n",
     "\n",
     "![](2023-07-05-IMC2023-Recap_files/inbox-14597895-2b2b6c045d8a2dfa0a536090f025db02-main_fig.png \"1st place solution, multiview refinement.\")\n",
@@ -148,7 +148,7 @@
     "\n",
     "### \"Old\" features are not done yet - KeyNetAffNet-HardNet solution.\n",
     "\n",
-    "5th place actually end up in money by using an modified [example submission](https://github.com/ducha-aiki/imc2023-kornia-starter-pack/blob/main/keynetaffnet-adalam-pycolmap-3dreconstruction.ipynb) with a classical pipeline using such ancient local features as DoG, Harris and GFTT, together with KeyNet (2019), coupled together with [local affine shape estimation](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/07/17/affine-correspondences.html) by AffNet, patch descriptor HardNet and hadncrafted AdaLAM matcher. \n",
+    "5th place actually end up in money by using an modified [example submission](https://github.com/ducha-aiki/imc2023-kornia-starter-pack/blob/main/keynetaffnet-adalam-pycolmap-3dreconstruction.ipynb) with a classical pipeline using such ancient local features as DoG, Harris and GFTT, together with KeyNet (2019), coupled together with [local affine shape estimation](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/07/17/affine-correspondences.html) by AffNet, patch descriptor HardNet and handcrafted AdaLAM matcher. \n",
     "\n",
     "Basically, that is cleverly engineered submission of the off-the-shelf local features, available in [kornia](https://kornia.readthedocs.io/en/latest/feature.html).\n",
     "\n",
@@ -218,9 +218,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
