--- a/_notebooks/2023-12-03-Geometry-Encoding-SIFT-LightGlue.ipynb
+++ b/_notebooks/2023-12-03-Geometry-Encoding-SIFT-LightGlue.ipynb
@@ -143,7 +143,12 @@
     "\n",
     "It was fun to train a couple of LightGlue models to check some hypothesis. Kudos to Philipp Lindenberger and Paul-Edouard Sarlin for releasing such amazing package and the paper. \n",
     "\n",
-    "I also think that the story with initializing learned matchers from other features, or even universal, feature-agnostic matchers is not over. "
+    "I also think that the story with initializing learned matchers from other features, or even universal, feature-agnostic matchers is not over. \n",
+    "\n",
+    "\n",
+    "### Acknowledgements.\n",
+    "\n",
+    "This blogpost is supported by CTU in Prague RCI computing cluster from `OP VVV funded project CZ.02.1.01/0.0/0.0/16 019/0000765 “Research Center for Informatics”` grant."
    ]
   }
  ],
