--- a/_notebooks/2023-12-03-Geometry-Encoding-SIFT-LightGlue.ipynb
+++ b/_notebooks/2023-12-03-Geometry-Encoding-SIFT-LightGlue.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiments with LightGlue: geometry representation and initialization \n",
+    "# \"Experiments with LightGlue: geometry representation and initialization\" \n",
     "> \"Keep it simple, stupid\"\n",
     "- toc: false\n",
     "- image: images/lightglue-sift-normal-meme.jpg\n",
