--- a/_notebooks/2023-12-03-Geometry-Encoding-SIFT-LightGlue.ipynb
+++ b/_notebooks/2023-12-03-Geometry-Encoding-SIFT-LightGlue.ipynb
@@ -101,13 +101,13 @@
     "Recently I have accidentally run ALIKED-LightGlue with DISK features. To my surprise, result was quite good. \n",
     "\n",
     "\n",
-    "![](2023-11-20-Geometry-Encoding-SIFT-LightGlue_files/disk-aliked-easy.png \"For easy image pairs, LightGlue trained for ALIKED features works for DISK features as well.\") \n",
+    "![](2023-11-20-Geometry-Encoding-SIFT-LightGlue_files/disk-aliked-easy.jpg \"For easy image pairs, LightGlue trained for ALIKED features works for DISK features as well.\") \n",
     "\n",
     "\n",
     " Unfortunately, that works only for simple image pairs, not harder ones.\n",
     " \n",
     " \n",
-    " ![](2023-11-20-Geometry-Encoding-SIFT-LightGlue_files/disk-aliked-hard.png \"For hard image pairs, LightGlue trained for ALIKED features does not work for DISK features\") \n",
+    " ![](2023-11-20-Geometry-Encoding-SIFT-LightGlue_files/disk-aliked-hard.jpg \"For hard image pairs, LightGlue trained for ALIKED features does not work for DISK features\") \n",
     " \n",
     " On the second though, that kind of makes sense - once (in intial layers) we went far from original descriptors, then the attention and positional encoding are kind of similar. \n",
     " \n",
